--- a/index.html
+++ b/index.html
@@ -8,37 +8,39 @@
 </head>
 <body>
     <script src="index.js" default></script>
-    <h1>  tryllekunstneren andini</h1>
+
+    <p class="fixed">Telefon nmr. +47 40834567</p>
+
+    <h1> Tryllekunstneren Andini</h1>
+   
 
 <img src="andini-med-kanin.jpg" alt="" class="andini-med-kanin">
-<p>Bor du i Bergen eller omegn og skal feire </p>
-<p >bursdag, holde firmafest, lage til juletrefest</p>
-<p >eller andre barnearrangement?</p>
-
-<p>Jeg har drevet med</p>
-<p>Sett prikken over i-en</p>
-<p>med et fortryllende</p>
-<p>barne- og familieshow.</p>
-<p>Jeg har drevet med barneunderholdning siden 1994,</p>
-<p>da jeg som 14-åring vant min første lokale.</p>
-<p> talentiade Siden den gang er tryllingen </p>
-<p>blitt en del av meg, en livsstil som jeg </p>
-<p>aldri kan slutte med. Jeg føler meg privilegert </p>
-<p>som får jobbe med det jeg brenner mest for,</p>
-<p> og håper og tror at dette er noe som gjenspeiles</p>
-<p>i kvaliteten på det jeg leverer.</p>
-<p>Mitt mål er at du som arrangør kan slappe helt</p>
-<p>av og se på at selv de yngste gjestene i ditt</p>
-<p> arrangement, koser seg med "ekte" magi, massevis av humor,</p>
-<p> ballongfigurer, levende kanin og viltre sprell, i full visshet om at</p>
-<p>arrangementet er en suksess. For meg er det essensielt at barna blir,</p>
-<p>engasjert og får delta aktivt under showet. Jeg er aldri fornøyd etter</p>
-<p>en opptreden uten at barna er både hese, svette,</p>
-<p>storøyd og har krampe i alle lattermusklene.</p>
+<p>Bor du i Bergen eller omegn og skal feire
+bursdag, holde firmafest, lage til juletrefest
+eller andre barnearrangement?
+Jeg har drevet med Sett prikken over i-en med et fortryllende barne- og familieshow.
+Jeg har drevet første lokale.
+med barneunderholdning siden 1994,
+da jeg som 14-åring vant min talentiade Siden den gang er tryllingen blitt en del av meg,
+en livsstil som jeg aldri kan slutte med.
+Jeg føler meg privilegert som får jobbe med det jeg brenner mest for,
+og håper og tror at dette er noe som gjenspeiles i kvaliteten på det jeg leverer.
+Mitt mål er at du som arrangør kan slappe helt av og se på at selv de yngste gjestene i ditt arrangement,
+koser seg med "ekte magi,
+massevis av humor,
+ballongfigurer,
+levende kanin og viltre sprell,
+i full atarrangementet er en suksess.
+visshet om For meg er detessensielt at barna blir,
+engasjert og får delta aktivt under showet.
+Jeg er aldri fornøyd etter en opptreden uten at barna er både hese,
+svette,
+storøyd og har krampe i alle lattermusklene.</p>
   
 
-<img src="andini med tørkle i honden.jpg" alt="" class="andini-med-tørkle-i-honden">
 <img src="Andin forskreket.jpg" alt="" class="Andin-forskreket">
+<img src="AndersDueSvart2.jpg" alt="" class="AndersDue">
+<img src="andini med tørkle i honden.jpg" alt="" class="andini-med-tørkle-i-honden">
 
 
 </body>
