--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tryllekunstneren andini</title>
-    <link rel="stylesheet" href="andini.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="index.js" default></script>
@@ -15,23 +15,32 @@
    
 
 <img src="andini-med-kanin.jpg" alt="" class="andini-med-kanin">
-<p>Bor du i Bergen eller omegn og skal feire
+<p class="hvor-optrer-jeg">Bor du i Bergen eller omegn og skal feire
 bursdag, holde firmafest, lage til juletrefest
 eller andre barnearrangement?
-Jeg har drevet med Sett prikken over i-en med et fortryllende barne- og familieshow.
-Jeg har drevet første lokale.
+Jeg har drevet med Sett prikken over i-en med et
+ fortryllende barne- og familieshow.</p>
+
+
+
+<p>har drevet første lokale.
 med barneunderholdning siden 1994,
-da jeg som 14-åring vant min talentiade Siden den gang er tryllingen blitt en del av meg,
-en livsstil som jeg aldri kan slutte med.
-Jeg føler meg privilegert som får jobbe med det jeg brenner mest for,
-og håper og tror at dette er noe som gjenspeiles i kvaliteten på det jeg leverer.
-Mitt mål er at du som arrangør kan slappe helt av og se på at selv de yngste gjestene i ditt arrangement,
+da jeg som 14-åring vant min talentiade Siden den gang er 
+tryllingen blitt en del av meg,
+en livsstil som jeg aldri kan slutte med.</p>
+<p> føler meg privilegert som får 
+jobbe med det 
+jeg brenner mest for,
+og håper og tror at dette er noe som 
+gjenspeiles i kvaliteten på det jeg leverer.
+Mitt mål er at du som arrangør kan slappe helt 
+av og se på at selv de yngste gjestene i ditt arrangement,
 koser seg med "ekte magi,
 massevis av humor,
 ballongfigurer,
 levende kanin og viltre sprell,
-i full atarrangementet er en suksess.
-visshet om For meg er detessensielt at barna blir,
+i full atarrangementet er en suksess.</p>
+<p>visshet om For meg er detessensielt at barna blir,
 engasjert og får delta aktivt under showet.
 Jeg er aldri fornøyd etter en opptreden uten at barna er både hese,
 svette,
