--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <p class="fixed">Telefon nmr. +47 40834567</p>
 
-    <h1> Tryllekunstneren Andini</h1>
+    <h1> Tryllekunstneren</h1>
+   
    
 
 <img src="andini-med-kanin.jpg" alt="" class="andini-med-kanin">
@@ -21,36 +22,37 @@ eller andre barnearrangement?
 Jeg har drevet med Sett prikken over i-en med et
  fortryllende barne- og familieshow.</p>
 
+ <h1 class="test">Andini</h1>
 
 
-<p>har drevet første lokale.
-med barneunderholdning siden 1994,
-da jeg som 14-åring vant min talentiade Siden den gang er 
-tryllingen blitt en del av meg,
-en livsstil som jeg aldri kan slutte med.</p>
-<p> føler meg privilegert som får 
-jobbe med det 
-jeg brenner mest for,
-og håper og tror at dette er noe som 
-gjenspeiles i kvaliteten på det jeg leverer.
-Mitt mål er at du som arrangør kan slappe helt 
-av og se på at selv de yngste gjestene i ditt arrangement,
-koser seg med "ekte magi,
-massevis av humor,
-ballongfigurer,
-levende kanin og viltre sprell,
-i full atarrangementet er en suksess.</p>
-<p>visshet om For meg er detessensielt at barna blir,
-engasjert og får delta aktivt under showet.
-Jeg er aldri fornøyd etter en opptreden uten at barna er både hese,
-svette,
-storøyd og har krampe i alle lattermusklene.</p>
   
 
-<img src="Andin forskreket.jpg" alt="" class="Andin-forskreket">
+<img src="AndiniShow2.jpg" alt="" class="AndiniShow2-jpg">
 <img src="AndersDueSvart2.jpg" alt="" class="AndersDue">
 <img src="andini med tørkle i honden.jpg" alt="" class="andini-med-tørkle-i-honden">
 
+<p>har drevet første lokale.
+    med barneunderholdning siden 1994,
+    da jeg som 14-åring vant min talentiade Siden den gang er 
+    tryllingen blitt en del av meg,
+    en livsstil som jeg aldri kan slutte med.</p>
+    <p> føler meg privilegert som får 
+    jobbe med det 
+    jeg brenner mest for,
+    og håper og tror at dette er noe som 
+    gjenspeiles i kvaliteten på det jeg leverer.
+    Mitt mål er at du som arrangør kan slappe helt 
+    av og se på at selv de yngste gjestene i ditt arrangement,
+    koser seg med "ekte magi,
+    massevis av humor,
+    ballongfigurer,
+    levende kanin og viltre sprell,
+    i full atarrangementet er en suksess.</p>
+    <p>visshet om For meg er detessensielt at barna blir,
+    engasjert og får delta aktivt under showet.
+    Jeg er aldri fornøyd etter en opptreden uten at barna er både hese,
+    svette,
+    storøyd og har krampe i alle lattermusklene.</p>
 
 </body>
 </html>
