--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
 <body>
     <script src="index.js" default></script>
 
+    
+    <h1> Tryllekunstneren Andini</h1>
     <p class="fixed">Telefon nmr. +47 40834567</p>
-
-    <h1> Tryllekunstneren</h1>
+    <div class="div3">
+        <img src="andini-med-kanin.jpg" alt="" class="andini-med-kanin">
+    </div>
+       
    
-   
 
-<img src="andini-med-kanin.jpg" alt="" class="andini-med-kanin">
+
+
 <p class="hvor-optrer-jeg">Bor du i Bergen eller omegn og skal feire
 bursdag, holde firmafest, lage til juletrefest
 eller andre barnearrangement?
 Jeg har drevet med Sett prikken over i-en med et
  fortryllende barne- og familieshow.</p>
 
- <h1 class="test">Andini</h1>
+
 
 
   
-
+<div class="div4">
 <img src="AndiniShow2.jpg" alt="" class="AndiniShow2-jpg">
 <img src="AndersDueSvart2.jpg" alt="" class="AndersDue">
 <img src="andini med tørkle i honden.jpg" alt="" class="andini-med-tørkle-i-honden">
-
+</div>
 <p>har drevet første lokale.
     med barneunderholdning siden 1994,
     da jeg som 14-åring vant min talentiade Siden den gang er 
